--- a/.github/workflow/python-checkin.yml
+++ b/.github/workflow/python-checkin.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'  # Setze die Python-Version
+        python-version: '3.12.3'  # Setze die Python-Version
 
     - name: Install dependencies
       run: |
@@ -25,12 +25,10 @@ jobs:
     
     - name: Run Python Script
       run: |
-        python your_script.py  # Python-Skript, das ausgeführt wird
+        python python_file.py  
 
     - name: Commit and push changes
       run: |
-        git config --global user.name "your-username"
-        git config --global user.email "your-email@example.com"
         git add .
         git commit -m "Automated check-in of Python files"
         git push
